--- a/PRT/PRT.vcxproj
+++ b/PRT/PRT.vcxproj
@@ -131,12 +131,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="GBufferPass.cpp" />
+    <ClCompile Include="ModelRenderPass.cpp" />
     <ClCompile Include="LightProbePass.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="ReLightProbePass.cpp" />
     <ClCompile Include="Sponza.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="GBufferPass.h" />
+    <ClInclude Include="ModelRenderPass.h" />
     <ClInclude Include="LightProbePass.h" />
     <ClInclude Include="ReLightProbePass.h" />
     <ClInclude Include="Sponza.h" />
@@ -144,6 +148,10 @@
   <ItemGroup>
     <None Include="BakeProbe_FS.glsl" />
     <None Include="BakeProbe_VS.glsl" />
+    <None Include="GBuffer_FS.glsl" />
+    <None Include="GBuffer_VS.glsl" />
+    <None Include="ModelRender_FS.glsl" />
+    <None Include="ModelRender_VS.glsl" />
     <None Include="SurfelLight_CS.glsl" />
     <None Include="SurfelSample_CS.glsl" />
   </ItemGroup>
