--- a/PRT/PRT.vcxproj.filters
+++ b/PRT/PRT.vcxproj.filters
@@ -36,6 +36,15 @@
     <ClCompile Include="GBufferPass.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="CustomGUI.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="ShadowMapPass.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="LightCamera.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="LightProbePass.h">
@@ -51,6 +60,15 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="GBufferPass.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="CustomGUI.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="ShadowMapPass.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="LightCamera.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
@@ -77,6 +95,12 @@
       <Filter>Shader</Filter>
     </None>
     <None Include="GBuffer_FS.glsl">
+      <Filter>Shader</Filter>
+    </None>
+    <None Include="RSMBuffer_VS.glsl">
+      <Filter>Shader</Filter>
+    </None>
+    <None Include="RSMBuffer_FS.glsl">
       <Filter>Shader</Filter>
     </None>
   </ItemGroup>
