--- a/PRT/PRT.vcxproj
+++ b/PRT/PRT.vcxproj
@@ -132,34 +132,41 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="CustomGUI.cpp" />
+    <ClCompile Include="DirectLightPass.cpp" />
     <ClCompile Include="GBufferPass.cpp" />
+    <ClCompile Include="IndirectLightPass.cpp" />
     <ClCompile Include="LightCamera.cpp" />
-    <ClCompile Include="ModelRenderPass.cpp" />
     <ClCompile Include="LightProbePass.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="ReLightProbePass.cpp" />
+    <ClCompile Include="ScreenQuadPass.cpp" />
     <ClCompile Include="ShadowMapPass.cpp" />
     <ClCompile Include="Sponza.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CustomGUI.h" />
+    <ClInclude Include="DirectLightPass.h" />
     <ClInclude Include="GBufferPass.h" />
+    <ClInclude Include="IndirectLightPass.h" />
     <ClInclude Include="LightCamera.h" />
-    <ClInclude Include="ModelRenderPass.h" />
     <ClInclude Include="LightProbePass.h" />
     <ClInclude Include="ReLightProbePass.h" />
+    <ClInclude Include="ScreenQuadPass.h" />
     <ClInclude Include="ShadowMapPass.h" />
     <ClInclude Include="Sponza.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="BakeProbe_FS.glsl" />
     <None Include="BakeProbe_VS.glsl" />
+    <None Include="DirectLightPass_CS.glsl" />
     <None Include="GBuffer_FS.glsl" />
     <None Include="GBuffer_VS.glsl" />
-    <None Include="ModelRender_FS.glsl" />
-    <None Include="ModelRender_VS.glsl" />
+    <None Include="IndirectLightPass_FS.glsl" />
+    <None Include="IndirectLightPass_VS.glsl" />
     <None Include="RSMBuffer_FS.glsl" />
     <None Include="RSMBuffer_VS.glsl" />
+    <None Include="ScreenQuad_FS.glsl" />
+    <None Include="ScreenQuad_VS.glsl" />
     <None Include="SurfelLight_CS.glsl" />
     <None Include="SurfelSample_CS.glsl" />
   </ItemGroup>
