--- a/PRT/PRT.vcxproj
+++ b/PRT/PRT.vcxproj
@@ -138,6 +138,7 @@
     <ClCompile Include="LightCamera.cpp" />
     <ClCompile Include="LightProbePass.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="ProbeDebugPass.cpp" />
     <ClCompile Include="ReLightProbePass.cpp" />
     <ClCompile Include="ScreenQuadPass.cpp" />
     <ClCompile Include="ShadowMapPass.cpp" />
@@ -150,6 +151,7 @@
     <ClInclude Include="IndirectLightPass.h" />
     <ClInclude Include="LightCamera.h" />
     <ClInclude Include="LightProbePass.h" />
+    <ClInclude Include="ProbeDebugPass.h" />
     <ClInclude Include="ReLightProbePass.h" />
     <ClInclude Include="ScreenQuadPass.h" />
     <ClInclude Include="ShadowMapPass.h" />
@@ -163,6 +165,10 @@
     <None Include="GBuffer_VS.glsl" />
     <None Include="IndirectLightPass_FS.glsl" />
     <None Include="IndirectLightPass_VS.glsl" />
+    <None Include="ProbeDebug_FS.glsl" />
+    <None Include="ProbeDebug_VS.glsl" />
+    <None Include="ProbeSphere_FS.glsl" />
+    <None Include="ProbeSphere_VS.glsl" />
     <None Include="RSMBuffer_FS.glsl" />
     <None Include="RSMBuffer_VS.glsl" />
     <None Include="ScreenQuad_FS.glsl" />
